Fix text alignment on landing page

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ html, body { font-size: 12px; font-family: sans-serif; width: 100%; color: #0F57
     .landing-page .info p { margin-bottom: 34px;line-height: 35px; text-align: left;  }
       .landing-page .info span { display: block; float: left; width: 30px; height: 30px; background-position: center center; background-size: contain; margin: 0 30px 0 0; }
       .landing-page .info span.checked { background-image: url('/circle-checked.png'); }
-      .landing-page .info span.unchecked { background-image: url('/circle-unchecked.png'); }
+      .landing-page .info span.unchecked { background-image: url('/circle-unchecked.png'); margin-bottom: 20px; }
 
   .landing-page h2 { margin: 0 0 2rem; }
   .landing-page .actions { margin-bottom: 8rem; }
